--- a/index.html
+++ b/index.html
@@ -18,37 +18,39 @@
 
         <div id="quadro">
 
-          <div>
+          <div id="A">
 
-            <h1>Learn to code by watching others</h1>
+            <div id="conteudo">
+              <h1>Learn to code by watching others</h1>
 
-            <p id="text1">
-              See how experienced developers solve problems in real-time.
-              Watching scripted tutorials is great, 
-              but understanding how developers think is invaluable.
-            </p>
-            
+              <p id="text1">
+                See how experienced developers solve problems in real-time.
+                Watching scripted tutorials is great, 
+                but understanding how developers think is invaluable.
+              </p>
+
+            </div>
+
           </div>
 
-          <div>
-            <div id="info">
+          <div id="B">
+            <div class="dupla" id="info">
               <p>Try it free 7 days then $20/mo. thereafter</p>
             </div>
 
-            <div id="dados">
+            <div class="dupla" id="dados">
 
               <form>
-                <input type="text" value="First Name"> <br>
-                <input type="text" value="Last Name"> <br>
-                <input type="email" value="Email Address"> <br>
-                <input type="password" value="Password"> <br>
-
-                <input id="submit" type="button" value="Claim your free trial">
+                <input class="campo" type="text" value="First Name"> <br>
+                <input class="campo" type="text" value="Last Name"> <br>
+                <input class="campo" type="email" value="Email Address"> <br>
+                <input class="campo" type="password" value="Password"> <br>
+                <input class="campo" id="submit" type="button" value="CLAIM YOUR FREE TRIAL">
               </form>
 
               
 
-              <p>By clicking the button, you are agreeing to our Terms and Services</p>
+              <p id="termos">By clicking the button, you are agreeing to our Terms and Services </p>
 
             </div>
 
