--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 
           <div id="B">
             <div class="dupla" id="info">
-              <p>Try it free 7 days then $20/mo. thereafter</p>
+              <p> <strong>Try it free 7 days</strong> then $20/mo. thereafter</p>
             </div>
 
             <div class="dupla" id="dados">
@@ -50,7 +50,7 @@
 
               
 
-              <p id="termos">By clicking the button, you are agreeing to our Terms and Services </p>
+              <p id="termos">By clicking the button, you are agreeing to our <span id="span"><strong>Terms and Services</strong></span></p>
 
             </div>
 
