--- a/index.html
+++ b/index.html
@@ -47,8 +47,10 @@
                 <label id="lsobrenome" for="sobrenome" class="msg">Last name cannot be empty</label>
                 <input id="email" class="campo" type="email" placeholder="Email Address"> <br>
                 <label id="lemail" for="email" class="msg">E-mail cannot be empty</label>
+                <label id="lemail2" for="password" class="msg">Looks like this is not an email</label>
                 <input id="password" class="campo" type="password" placeholder="Password"> <br>
                 <label id="lpassword" for="password" class="msg">Password cannot be empty</label>
+                
                 <input id="submit" class="campo"  type="button" value="CLAIM YOUR FREE TRIAL">
               </form>
 
@@ -67,8 +69,7 @@
 
   <footer>
     <p class="attribution">
-      Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-      Coded by <a href="#">Andy Rodrigo</a>.
+      Coded by <a href="https://github.com/andyrodrigo" target="_blank">Andy Rodrigo</a>.
     </p>
   </footer>
 
