--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">  <!-- displays site properly based on user's device -->
     <link rel="stylesheet" href="style.css">
+    <link rel="icon" type="image/x-icon" href="imagens/favicon.png">
     
     <title>Sign-Up Page</title>
 
@@ -50,7 +51,6 @@
                 <label id="lemail2" for="password" class="msg">Looks like this is not an email</label>
                 <input id="password" class="campo" type="password" placeholder="Password"> <br>
                 <label id="lpassword" for="password" class="msg">Password cannot be empty</label>
-                
                 <input id="submit" class="campo"  type="button" value="CLAIM YOUR FREE TRIAL">
               </form>
 
