--- a/inside/casamento.html
+++ b/inside/casamento.html
@@ -4,9 +4,44 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="casamento.css">
+
     <title>Lista de Presentes</title>
 </head>
-<body>
-    teste
+<body class="flex" >
+    <article class="flex">
+        <header class="flex" >
+            <h1>Anderson e Jordana</h1>
+            <h4>29.04.2023</h5>
+        </header>
+    
+        <main class="flex">
+            <img id="foto" src="foto2.jpg">
+            <div id="lista">
+                <img src="presente.png" class="presente">
+                <h3>Lista de Presentes</h3>
+                <img src="presente.png" class="presente">
+            </div>
+
+            <div id="texto">
+                <p id="mensagem">Já moramos juntos há algum tempo, então, não faria sentido criar uma lista de presentes para a nossa união, já que temos a maior parte das coisas que um casal precisa para começar sua vida juntos. Entretanto, pretendemos começar um família este ano. Por isso, gostaríamos que ao invés de escolher um item de uma lista para nos dar, você pudesse nos presentear com qualquer valor que quiser contribuir para esta nova fase que iniciaremos.</p>
+                <br>
+                <p id="gratidao">Ficamos gratos!</p>
+                <br>
+                <hr>
+                <br>
+                <h5>PIX: jordanacsouza@gmail.com</h5>
+            </div>
+            <br>
+            <br>
+            <footer class="flex">
+                <a href="">Nossa História</a> 
+                <a href="">Contagem Regressiva</a> 
+                <a href="">Momentos</a> 
+            </footer>
+
+            
+        </main>
+    </article>
 </body>
 </html>
