Nossa Historia criado

--- a/inside/casamento.html
+++ b/inside/casamento.html
@@ -61,7 +61,7 @@
             </section>
 
             <section id="historia">
-                teste1
+                <img id="jornal" src="historia.jpg">
             </section>
     
             <section id="contagem">
