--- a/inside/casamento.html
+++ b/inside/casamento.html
@@ -49,7 +49,7 @@
                     <br>
                     <hr>
                     <br>
-                    <h5>O PIX é o telefone: 84 988253851</h5>
+                    <h4 style="color:black">O PIX é o telefone: 84 988253851</h4>
                     <h5>Em nome de: Anderson Rodrigo Gomes Benício</h5>
                 </div>
                 <br>
