--- a/inside/casamento.html
+++ b/inside/casamento.html
@@ -49,14 +49,14 @@
                     <br>
                     <hr>
                     <br>
-                    <h5>O PIX é o telefone: 84 988253851</h5>
+                    <h4 style="color:black">O PIX é o telefone: 84 988253851</h4>
                     <h5>Em nome de: Anderson Rodrigo Gomes Benício</h5>
                 </div>
                 <br>
                 <br>
                 <footer class="flex" >
-                    <a id="historiaLink">Nossa História</a> 
-                    <a id="contagemLink" >Contagem Regressiva</a> 
+                    <button id="historiaLink"><h3>Nossa História</h3></button>
+                    <button id="contagemLink"><h3>Contagem Regressiva</h3></button>
                 </footer>
             </section>
 
@@ -91,8 +91,8 @@
 
 
             <footer id="voltar" class="flex">
-                <a id="voltarLink">voltar</a>
-            </footer>
+                <button id="voltarLink"><h3>voltar</h3></button>
+            </footer> 
         </main>
 
 
