--- a/inside/casamento.html
+++ b/inside/casamento.html
@@ -54,10 +54,22 @@
                 </div>
                 <br>
                 <br>
-                <footer class="flex" >
-                    <button id="historiaLink"><h3>Nossa História</h3></button>
-                    <button id="contagemLink"><h3>Contagem Regressiva</h3></button>
+                <footer class="flex" >               
+                    <div style="display: flex; justify-content: space-between; width: 95%;">
+                        <button id="previaLink"><h3>Fotos da Prévia</h3></button>
+                        <button id="historiaLink"><h3>Nossa História</h3></button>
+                        <button id="contagemLink"><h3>Contagem Regressiva</h3></button>
+                    </div>
                 </footer>
+            </section>
+
+            <section id="previa">
+                <img class="fotoP" src="p1.jpg">
+                <img class="fotoP" src="p2.jpg">
+                <img class="fotoP" src="p3.jpg">
+                <img class="fotoP" src="p4.jpg">
+                <img class="fotoP" src="p5.jpg">
+                <img class="fotoP" src="p6.jpg">
             </section>
 
             <section id="historia">
